<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="90">


        <EditText
            android:id="@+id/etRow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="30"
            android:gravity="center"
            android:hint="@string/enter_row"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1" />

        <EditText
            android:id="@+id/etColumn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="30"
            android:gravity="center"
            android:hint="@string/enter_column"
            android:inputType="number"
            android:maxLength="1"
            android:maxLines="1" />

        <Button
            android:id="@+id/btnGenrateGrid"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="30"
            android:text="@string/generate" />
    </LinearLayout>


    <TableLayout
        android:id="@+id/table_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <Button
            android:id="@+id/btnRandom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/randomize" />

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/calculate" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <EditText
            android:id="@+id/etInputNumberBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:gravity="center"
            android:maxLength="1"
            android:maxLines="1"
            android:hint="@string/enter_number" />

        <Button
            android:id="@+id/btnResult"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/result" />
    </LinearLayout>

    <TextView

        android:id="@+id/countoutput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>